fix: prevent guesses from stretching rightContainer

--- a/src/app/components/Game/index.module.scss
+++ b/src/app/components/Game/index.module.scss
@@ -40,6 +40,7 @@
 .rightContainer {
   width: varSize(300);
   height: 100%;
+  max-height: varSize(594);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
